dynamic breadcrumb trail

--- a/app/views/hmcts-a/guidance2.html
+++ b/app/views/hmcts-a/guidance2.html
@@ -73,44 +73,44 @@
     </div>
     <div class="column-third guidance">
       <h3 class="category-title">
-        <a href="/intra-a/civil/">Civil</a>
+        <a href="/hmcts-a/civil/">Civil</a>
       </h3>
 
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/civil/guidance">Civil guidance</a>
+            <a href="/hmcts-a/civil/guidance">Civil guidance</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/civil/sops">Civil SOPs</a>
+            <a href="/hmcts-a/civil/sops">Civil SOPs</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/civil/desk-aids">Civil desk aids</a>
+            <a href="/hmcts-a/civil/desk-aids">Civil desk aids</a>
           </h4>
         </li>
       </ul>
       <h3 class="category-title">
-        <a href="/intra-a/crime/">Crime</a>
+        <a href="/hmcts-a/crime/">Crime</a>
       </h3>
 
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/crime/guidance">Crime guidance</a>
+            <a href="/hmcts-a/crime/guidance">Crime guidance</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/crime/sops">Crime SOPs</a>
+            <a href="/hmcts-a/crime/sops">Crime SOPs</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/crime/desk-aids">Crime desk aids</a>
+            <a href="/hmcts-a/crime/desk-aids">Crime desk aids</a>
           </h4>
         </li>
       </ul>
@@ -119,23 +119,23 @@
     <div class="column-third guidance">
 
     <h3 class="category-title with-children">
-      <a href="/intra-a/general">General</a>
+      <a href="/hmcts-a/general">General</a>
     </h3>
 
     <ul class="children-list">
       <li class="child-item">
         <h4 class="child-title">
-          <a href="/intra-a/general/guidance">General guidance</a>
+          <a href="/hmcts-a/general/guidance">General guidance</a>
         </h4>
       </li>
       <li class="child-item">
         <h4 class="child-title">
-          <a href="/intra-a/general/sops">General SOPs</a>
+          <a href="/hmcts-a/general/sops">General SOPs</a>
         </h4>
       </li>
       <li class="child-item">
         <h4 class="child-title">
-          <a href="/intra-a/general/desk-aids">General desk aids</a>
+          <a href="/hmcts-a/general/desk-aids">General desk aids</a>
         </h4>
       </li>
     </ul>
