--- a/app/views/hmcts-a/my-work.html
+++ b/app/views/hmcts-a/my-work.html
@@ -22,31 +22,31 @@
   </div>
   <div class="grid-row">
     <div class="column-third guidance my-work">
-      <h3 class="category-title with-children"><a href="/hmcts-a/work/civil/">Civil</a></h3>
+      <h3 class="category-title with-children"><a href="/hmcts-a/work/civil#w1">Civil</a></h3>
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/hmcts-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms#w1">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">SOPs - civil</a>
+            <a href="/hmcts-a/work/civil/sops#w1">SOPs - civil</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/policies#w1">Policies and procedures</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+            <a href="/hmcts-a/work/civil/programmesv">Programmes and projects</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+            <a href="/hmcts-a/work/civil/email#w1">Use of email in civil and family courts</a>
           </h4>
         </li>
   </ul>
@@ -57,27 +57,27 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">SOPs - Crown Court</a>
+            <a href="/hmcts-a/work/civil/sops">SOPs - Crown Court</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+            <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/youth">Youth</a>
+            <a href="/hmcts-a/work/civil/youth">Youth</a>
           </h4>
         </li>
   </ul>
@@ -89,27 +89,27 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">SOPs - Family</a>
+            <a href="/hmcts-a/work/civil/sops">SOPs - Family</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+            <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+            <a href="/hmcts-a/work/civil/email">Use of email in civil and family courts</a>
           </h4>
         </li>
       </ul>
@@ -121,32 +121,32 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Applications and warrants</a>
+            <a href="/hmcts-a/work/civil/forms">Applications and warrants</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">Civil</a>
+            <a href="/hmcts-a/work/civil/sops">Civil</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Crime</a>
+            <a href="/hmcts-a/work/civil/policies">Crime</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Family</a>
+            <a href="/hmcts-a/work/civil/programmes">Family</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Learning and career development</a>
+            <a href="/hmcts-a/work/civil/email">Learning and career development</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Legal and Judicial Services Team</a>
+            <a href="/hmcts-a/work/civil/email">Legal and Judicial Services Team</a>
           </h4>
         </li>
       </ul>
@@ -157,37 +157,37 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">SOPs - Magistrates' Court</a>
+            <a href="/hmcts-a/work/civil/sops">SOPs - Magistrates' Court</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Legal Aid business team</a>
+            <a href="/hmcts-a/work/civil/policies">Legal Aid business team</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/programmes">Policies and procedures</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Programmes and projects</a>
+            <a href="/hmcts-a/work/civil/email">Programmes and projects</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Single Justice Procedure (SJP)</a>
+            <a href="/hmcts-a/work/civil/email">Single Justice Procedure (SJP)</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Youth</a>
+            <a href="/hmcts-a/work/civil/email">Youth</a>
           </h4>
         </li>
       </ul>
@@ -198,27 +198,27 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/sops">SOPs - Tribunals</a>
+            <a href="/hmcts-a/work/civil/sops">SOPs - Tribunals</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+            <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/email">Judicial Office</a>
+            <a href="/hmcts-a/work/civil/email">Judicial Office</a>
           </h4>
         </li>
       </ul>
@@ -233,27 +233,27 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">HMCTS Performance Database</a>
+            <a href="/hmcts-a/work/civil/forms">HMCTS Performance Database</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Libra MIS - Management Information Services</a>
+            <a href="/hmcts-a/work/civil/forms">Libra MIS - Management Information Services</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Court statistics</a>
+            <a href="/hmcts-a/work/civil/forms">Court statistics</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms and guidance</a>
+            <a href="/hmcts-a/work/civil/forms">Forms and guidance</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">BMS guide</a>
+            <a href="/hmcts-a/work/civil/forms">BMS guide</a>
           </h4>
         </li>
       </ul>
@@ -264,17 +264,17 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Prison to court video link (PCVL)</a>
+            <a href="/hmcts-a/work/civil/forms">Prison to court video link (PCVL)</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Live links / virtual courts</a>
+            <a href="/hmcts-a/work/civil/forms">Live links / virtual courts</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Victims and witness links (VIW)</a>
+            <a href="/hmcts-a/work/civil/forms">Victims and witness links (VIW)</a>
           </h4>
         </li>
       </ul>
@@ -285,12 +285,12 @@
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Policies and procedures</a>
+            <a href="/hmcts-a/work/civil/forms">Policies and procedures</a>
           </h4>
         </li>
 
