--- a/app/views/hmcts-a/my-work2.html
+++ b/app/views/hmcts-a/my-work2.html
@@ -28,27 +28,27 @@
            <ul class="children-list">
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/hmcts-a/work/civil/forms">Forms</a>
+                  <a href="/hmcts-a/work/civil/forms#w2">Forms</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/sops">SOPs - civil</a>
+                  <a href="/hmcts-a/work/civil/sops#w2">SOPs - civil</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+                  <a href="/hmcts-a/work/civil/policies#w2">Policies and procedures</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+                  <a href="/hmcts-a/work/civil/programmes#w2">Programmes and projects</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+                  <a href="/hmcts-a/work/civil/email#w2">Use of email in civil and family courts</a>
                 </h4>
               </li>
         </ul>
@@ -62,27 +62,27 @@
             <ul class="children-list">
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Forms</a>
+                  <a href="/hmcts-a/work/civil/forms">Forms</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/sops">SOPs - Crown Court</a>
+                  <a href="/hmcts-a/work/civil/sops">SOPs - Crown Court</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+                  <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+                  <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/youth">Youth</a>
+                  <a href="/hmcts-a/work/civil/youth">Youth</a>
                 </h4>
               </li>
         </ul>
@@ -97,27 +97,27 @@
           <ul class="children-list">
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">Forms</a>
+                <a href="/hmcts-a/work/civil/forms">Forms</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/sops">SOPs - Family</a>
+                <a href="/hmcts-a/work/civil/sops">SOPs - Family</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+                <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+                <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+                <a href="/hmcts-a/work/civil/email">Use of email in civil and family courts</a>
               </h4>
             </li>
           </ul>
@@ -133,32 +133,32 @@
             <ul class="children-list">
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Applications and warrants</a>
+                  <a href="/hmcts-a/work/civil/forms">Applications and warrants</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/sops">Civil</a>
+                  <a href="/hmcts-a/work/civil/sops">Civil</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/policies">Crime</a>
+                  <a href="/hmcts-a/work/civil/policies">Crime</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/programmes">Family</a>
+                  <a href="/hmcts-a/work/civil/programmes">Family</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/email">Learning and career development</a>
+                  <a href="/hmcts-a/work/civil/email">Learning and career development</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/email">Legal and Judicial Services Team</a>
+                  <a href="/hmcts-a/work/civil/email">Legal and Judicial Services Team</a>
                 </h4>
               </li>
             </ul>
@@ -173,37 +173,37 @@
               <ul class="children-list">
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/forms">Forms</a>
+                    <a href="/hmcts-a/work/civil/forms">Forms</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/sops">SOPs - Magistrates' Court</a>
+                    <a href="/hmcts-a/work/civil/sops">SOPs - Magistrates' Court</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/policies">Legal Aid business team</a>
+                    <a href="/hmcts-a/work/civil/policies">Legal Aid business team</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/programmes">Policies and procedures</a>
+                    <a href="/hmcts-a/work/civil/programmes">Policies and procedures</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/email">Programmes and projects</a>
+                    <a href="/hmcts-a/work/civil/email">Programmes and projects</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/email">Single Justice Procedure (SJP)</a>
+                    <a href="/hmcts-a/work/civil/email">Single Justice Procedure (SJP)</a>
                   </h4>
                 </li>
                 <li class="child-item">
                   <h4 class="child-title">
-                    <a href="/intra-a/work/civil/email">Youth</a>
+                    <a href="/hmcts-a/work/civil/email">Youth</a>
                   </h4>
                 </li>
               </ul>
@@ -218,27 +218,27 @@
           <ul class="children-list">
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">Forms</a>
+                <a href="/hmcts-a/work/civil/forms">Forms</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/sops">SOPs - Tribunals</a>
+                <a href="/hmcts-a/work/civil/sops">SOPs - Tribunals</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+                <a href="/hmcts-a/work/civil/policies">Policies and procedures</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+                <a href="/hmcts-a/work/civil/programmes">Programmes and projects</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/email">Judicial Office</a>
+                <a href="/hmcts-a/work/civil/email">Judicial Office</a>
               </h4>
             </li>
           </ul>
@@ -256,27 +256,27 @@
           <ul class="children-list">
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">HMCTS Performance Database</a>
+                <a href="/hmcts-a/work/civil/forms">HMCTS Performance Database</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">Libra MIS - Management Information Services</a>
+                <a href="/hmcts-a/work/civil/forms">Libra MIS - Management Information Services</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">Court statistics</a>
+                <a href="/hmcts-a/work/civil/forms">Court statistics</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">Forms and guidance</a>
+                <a href="/hmcts-a/work/civil/forms">Forms and guidance</a>
               </h4>
             </li>
             <li class="child-item">
               <h4 class="child-title">
-                <a href="/intra-a/work/civil/forms">BMS guide</a>
+                <a href="/hmcts-a/work/civil/forms">BMS guide</a>
               </h4>
             </li>
           </ul>
@@ -291,17 +291,17 @@
             <ul class="children-list">
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Prison to court video link (PCVL)</a>
+                  <a href="/hmcts-a/work/civil/forms">Prison to court video link (PCVL)</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Live links / virtual courts</a>
+                  <a href="/hmcts-a/work/civil/forms">Live links / virtual courts</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Victims and witness links (VIW)</a>
+                  <a href="/hmcts-a/work/civil/forms">Victims and witness links (VIW)</a>
                 </h4>
               </li>
             </ul>
@@ -316,12 +316,12 @@
             <ul class="children-list">
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Forms</a>
+                  <a href="/hmcts-a/work/civil/forms">Forms</a>
                 </h4>
               </li>
               <li class="child-item">
                 <h4 class="child-title">
-                  <a href="/intra-a/work/civil/forms">Policies and procedures</a>
+                  <a href="/hmcts-a/work/civil/forms">Policies and procedures</a>
                 </h4>
               </li>
 
