--- a/app/views/hmcts-a/my-work3.html
+++ b/app/views/hmcts-a/my-work3.html
@@ -22,7 +22,7 @@
   </div>
   <div class="grid-row">
     <div class="column-third guidance my-work">
-      <h3 class="category-title with-children"><a href="/hmcts-a/work/civil/">Civil</a></h3>
+      <h3 class="category-title with-children"><a href="/hmcts-a/work/civil#w3">Civil</a></h3>
 
     </div>
     <div class="column-third guidance my-work">
