--- a/app/views/layout-hmcts-a.html
+++ b/app/views/layout-hmcts-a.html
@@ -40,7 +40,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/hmcts-a/my-work" class="category-link">
+        <a href="/hmcts-a/my-work" class="category-link version-origin">
           My work  </a>
 
       </li>
