--- a/app/views/hmcts-a/guidance1.html
+++ b/app/views/hmcts-a/guidance1.html
@@ -6,7 +6,7 @@
 {% block content %}
 <main id="content" role="main" class="home-page">
   <ul class="breadcrumbs-list">
-    <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+    <li class="breadcrumb-item "><a href="/hmcts-a/" class="breadcrumb-link">Home</a>
             <span class="separator"></span>
     </li>
     <li class="breadcrumb-item current">Guidance and forms</li>
