--- a/app/views/hmcts-a/work/civil/index.html
+++ b/app/views/hmcts-a/work/civil/index.html
@@ -12,7 +12,7 @@
       <li class="breadcrumb-item "><a href="/hmcts-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/hmcts-a/my-work2" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/hmcts-a/my-work2" class="breadcrumb-link version-origin">My work</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">Civil
@@ -27,7 +27,7 @@
       <div class="left-hand-navigation">
 
             <ul>
-              <li class="main-section"><a href="/hmcts-a/my-work3">My work</a></li>
+              <li class="main-section"><a href="/hmcts-a/my-work3" class="version-origin">My work</a></li>
               <li class="parent-section agency-page"><a href="/hmcts-a/work/civil">Civil</a></li>
 
               <li class="child agency-page">
@@ -105,5 +105,7 @@
 
 
 </main>
+
+
 
 {% endblock %}
