--- a/app/views/hmcts-a/guidance1.html
+++ b/app/views/hmcts-a/guidance1.html
@@ -52,7 +52,7 @@
       <h3 class="category-title"><a href="#">Research and analysis</a></h3>
       <h3 class="category-title"><a href="#">Reserve forces</a></h3>
       <h3 class="category-title"><a href="#">Risk management</a></h3>
-      <h3 class="category-title"><a href="#">Security</a></h3>
+      <h3 class="category-title"><a href="security">Security</a></h3>
       <h3 class="category-title"><a href="#">Social media</a></h3>
       <h3 class="category-title"><a href="#">Statistical summaries</a></h3>
       <h3 class="category-title"><a href="#">Working with arms length bodies (ALBs)</a></h3>
