--- a/app/views/hmcts-a/guidance2.html
+++ b/app/views/hmcts-a/guidance2.html
@@ -23,7 +23,7 @@
   <div class="grid-row">
     <div class="column-third guidance">
       <h2 class="heading-small guidance-h2" id="general">General guidance</h2>
-      <p class="smaller-text">Find information on LAA's and MoJ's policies and processes.</p>
+      <p class="smaller-text">Find information on HMCTS and MoJ's policies and processes.</p>
     </div>
     <div class="column-third guidance">
     <h3 class="category-title"><a href="#">Buildings and facilities</a></h3>
@@ -52,7 +52,7 @@
       <h3 class="category-title"><a href="#">Research and analysis</a></h3>
       <h3 class="category-title"><a href="#">Reserve forces</a></h3>
       <h3 class="category-title"><a href="#">Risk management</a></h3>
-      <h3 class="category-title"><a href="#">Security</a></h3>
+      <h3 class="category-title"><a href="security">Security</a></h3>
       <h3 class="category-title"><a href="#">Social media</a></h3>
       <h3 class="category-title"><a href="#">Statistical summaries</a></h3>
       <h3 class="category-title"><a href="#">Working with arms length bodies (ALBs)</a></h3>
@@ -64,84 +64,7 @@
   </div>
 
 
-  <div class="grid-row second-row alt">
-    <div class="column-third guidance">
 
-      <h2 class="heading-small guidance-h2" id="case-management">Case management</h2>
-      <p class="smaller-text">Find SOPs and desk aids relating to case management.</p>
-
-    </div>
-    <div class="column-third guidance">
-      <h3 class="category-title">
-        <a href="/hmcts-a/civil/">Civil</a>
-      </h3>
-
-      <ul class="children-list">
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/civil/guidance">Civil guidance</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/civil/sops">Civil SOPs</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/civil/desk-aids">Civil desk aids</a>
-          </h4>
-        </li>
-      </ul>
-      <h3 class="category-title">
-        <a href="/hmcts-a/crime/">Crime</a>
-      </h3>
-
-      <ul class="children-list">
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/crime/guidance">Crime guidance</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/crime/sops">Crime SOPs</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/hmcts-a/crime/desk-aids">Crime desk aids</a>
-          </h4>
-        </li>
-      </ul>
-
-    </div>
-    <div class="column-third guidance">
-
-    <h3 class="category-title with-children">
-      <a href="/hmcts-a/general">General</a>
-    </h3>
-
-    <ul class="children-list">
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/hmcts-a/general/guidance">General guidance</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/hmcts-a/general/sops">General SOPs</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/hmcts-a/general/desk-aids">General desk aids</a>
-        </h4>
-      </li>
-    </ul>
-
-    </div>
-  </div>
 
 </main>
 
