--- a/app/views/hmcts-a/work/civil/forms.html
+++ b/app/views/hmcts-a/work/civil/forms.html
@@ -33,7 +33,7 @@
               <li class="main-section"><a href="/hmcts-a/my-work2" class="version-origin">My work</a></li>
               <li class="parent-section agency-page"><a href="/hmcts-a/work/civil">Civil</a></li>
 
-              <li class="child agency-page">
+              <li class="current-page child agency-page">
                 <a href="forms.html">Forms</a>
               </li>
               <li class="child agency-page">
