--- a/app/views/hmcts-a/work/civil/sops.html
+++ b/app/views/hmcts-a/work/civil/sops.html
@@ -36,7 +36,7 @@
               <li class="child agency-page">
                 <a href="forms.html">Forms</a>
               </li>
-              <li class="child agency-page">
+              <li class="current-page child agency-page">
                 <a href="sops.html">SOPs - Civil</a>
               </li>
               <li class="child agency-page">
