--- a/app/views/hmcts-a/work/civil/sops.html
+++ b/app/views/hmcts-a/work/civil/sops.html
@@ -12,7 +12,7 @@
       <li class="breadcrumb-item "><a href="/hmcts-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a  href="/hmcts-a/my-work2" class="breadcrumb-link version-origin">My work</a>
+      <li class="breadcrumb-item current"><a  href="/hmcts-a/my-work" class="breadcrumb-link version-origin">My work</a>
         <span class="separator"></span>
 
       </li>
